# omni-sfm

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml  requirements.txt  run_cmd_colmap_rig_sfm.py  run_pycolmap_rig_sfm.py
scripts/: run_cmd_colmap_rig_sfm.py  run_pycolmap_rig_sfm.py
src/: __init__.py  comfy_ui.py  gradio_ui.py  omni_processor.py  omni_ui.py
