[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omni-sfm"
version = "0.1.0"
description = "Structure-from-Motion pipeline for omnidirectional imagery"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "vincentqyw", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Processing"
]

dependencies = [
    "numpy>=1.21",
    "opencv-python>=4.5",
    "colmap>=3.8",
    "gradio>=3.0",
    "comfyui>=1.0"
]

[project.optional-dependencies]
dev = [
    "black>=23.3",
    "flake8>=6.0",
    "isort>=5.13",
    "pytest>=7.0"
]

[project.urls]
Homepage = "https://github.com/vincentqyw/omni-sfm"
Documentation = "https://github.com/vincentqyw/omni-sfm#readme"
